Fixed layout issue

--- a/zip-app/src/ZipForm.css
+++ b/zip-app/src/ZipForm.css
@@ -28,6 +28,8 @@ input[type=text]{
 }
 
 .elements-container {
+	margin: 20px;
+	background: rgba(10, 10, 10, 0.1);
 	padding: 15px 25%;
 	text-align: left;
 }
